docs: comprehensive documentation update for SpectorRuntime + spector-dist
- README: added 7 memory tools to MCP table, spector.jar + --config, updated arch tree
  with spector-runtime/spector-dist, updated dep graph, fat JAR quick start, roadmap
- docs/memory/performance.md: removed before/after refactoring language, professional tone
- docs/sdk-usage/mcp-server.md: updated JAR paths, added config file section, memory tools
- docs/architecture/overview.md: added runtime/dist to diagrams, updated dep rules
- docs/memory/getting-started.md: updated Claude config for spector.yml
- spector-mcp/README.md: complete rewrite with runtime architecture, 13 tools